# umka

./: .env.template  .gitignore  .mypy.ini  .pylintrc  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
config/: config.template.toml
src/: __main__.py
src/application/common/: transactional.py
src/application/grade_book/: exceptions.py
src/application/grade_book/commands/: enter_grade.py
src/application/grade_book/dto/: __init__.py  grade.py
src/application/grade_book/queries/: get_grades.py
src/application/user/: exceptions.py
src/application/user/commands/: create_user.py
src/application/user/dto/: deleted_user.py  user.py
src/domain/common/entities/: __init__.py
src/domain/grade/entities/: __init__.py  grade.py  subject.py
src/domain/grade/value_objects/: score.py
src/domain/user/: __init__.py  exceptions.py
src/domain/user/entities/: __init__.py  user.py
src/domain/user/events/: __init__.py  full_name_updated.py  user_created.py
src/domain/user/value_objects/: __init__.py  full_name.py  tg_user_id.py
src/infrastructure/: containers.py  uow.py
src/infrastructure/log/: main.py
src/infrastructure/postgres/: converters.py  main.py
src/infrastructure/postgres/models/: __init__.py  grade.py  subject.py  user.py
src/infrastructure/postgres/repositories/: grade_book.py  user.py
src/presentation/: config.py
src/presentation/api/: __main__.py  config.py  main.py  middleware.py
src/presentation/bot/: config.py  main.py  utils.py
tests/mocks/: uow.py  user_repo.py
(+24 files in other folders)
